<resources>
    <string name="app_name">Hillfort App</string>
    <string name="hint_hillfortTitle">Title</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_deleteImage"> Delete Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="blank_location">No location set</string>
    <string name="checkboxHillFortVisited">Visited</string>
    <string name="visitDate">Date Visited</string>
    <string name="menu_deleteHillfort">Delete Hillfort</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_dropdown">menu_dropdown</string>
    <string name="updateEmail">Update Email</string>
    <string name="updatePassword">Update Password</string>
    <string name="notes">Notes…</string>
    <string name="menu_map">menu_map</string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts </string>
    <string name="menu_saveHillfort">Save</string>
    <string name="title_activity_hillfort_list">Hillfort App</string>
    <string name="title_activity_hillfort">Hillfort App</string>
    <string name="title_activity_edit_location">Hillfort App</string>
    <string name="menu_star">menu_star</string>
</resources>
