<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menuGroup"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/hillfort_delete"
            android:title="@string/menu_deleteHillfort"
            android:icon="@android:drawable/ic_menu_delete"
            app:showAsAction="always"/>
    </group>

    <item
        android:id="@+id/item_save"
        android:title="@string/menu_saveHillfort"
        app:showAsAction="always"/>
    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelHillfort"
        app:showAsAction="always"/>

</menu>